A lot of almost purely cosmetic code cleanups